--- a/Carnotauro/index.html
+++ b/Carnotauro/index.html
@@ -17,10 +17,10 @@
     </header>
     <main>
         <h2 id="subtituloUm">O CARNOTAURO</h2>
-        <p> Este tão conhecido dinossauro foi um dos carnívoros mais importantes do período <a href="#">Cretáceo</a>. Com seus chifres característicos e aparência amedrontadora, conquistou atenção de muitos. Agora, convido-o para conhecê-lo um pouco melhor.</p>
+        <p> Este tão conhecido dinossauro foi um dos carnívoros mais importantes do período <a href="cretaceo.html">Cretáceo</a>. Com seus chifres característicos e aparência amedrontadora, conquistou atenção de muitos. Agora, convido-o para conhecê-lo um pouco melhor.</p>
         <img src="Carnotaurus3.png"  alt="carnotauro" id="carnotauroimg">
         <h2 class="subt">DESCOBERTA</h2>
-        <p>O único fóssil de carnotauro conhecido foi encontrado em 1984 na província de Chubut, na Argentina, em uma pesquisa liderada pelo arqueólogo José Bonaparte. O fóssil é de um dinossauro já adulto, e que foi consideravelmente deformado pelo processo de fossilização e por outros processos físicos como o <a href="#">intemperismo</a>. Em 1985, um ano depois de encontrado, foi divulgado de fato ao mundo aquele novo dinossauro. Hoje em dia o fóssil se encontra no Museu Argentino de Ciências Naturais. </p>
+        <p>O único fóssil de carnotauro conhecido foi encontrado em 1984 na província de Chubut, na Argentina, em uma pesquisa liderada pelo arqueólogo José Bonaparte. O fóssil é de um dinossauro já adulto, e que foi consideravelmente deformado pelo processo de fossilização e por outros processos físicos como o <a href="intemperismo.html">intemperismo</a>. Em 1985, um ano depois de encontrado, foi divulgado de fato ao mundo aquele novo dinossauro. Hoje em dia o fóssil se encontra no Museu Argentino de Ciências Naturais. </p>
         <h2 class="subt">ETIMOLOGIA</h2>
         <p>O nome Carnotauro deriva de duas palavras latinas, "carnis"(carne) e "taurus"(touro), e pode-se ser traduzido como "touro carnívoro". Seu nome foi dado por conta dos dois chifres que possuía. O uso desses chifres não é totalmente claro. Várias interpretações giraram em torno do uso na luta contra coespecíficos ou para matar presas, embora também seja possível o uso em exibição para corte ou reconhecimento de membros da mesma espécie.</p>
         <h2 class="subt">CURIOSIDADES</h2>
