--- a/Carnotauro/index.html
+++ b/Carnotauro/index.html
@@ -18,7 +18,10 @@
     <main>
         <h2 id="subtituloUm">O CARNOTAURO</h2>
         <p> Este tão conhecido dinossauro foi um dos carnívoros mais importantes do período <a href="cretaceo.html">Cretáceo</a>. Com seus chifres característicos e aparência amedrontadora, conquistou atenção de muitos. Agora, convido-o para conhecê-lo um pouco melhor.</p>
-        <img src="Carnotaurus3.png"  alt="carnotauro" id="carnotauroimg">
+         
+        <picture> <source media="(max-width: 430px)" srcset="Carnotaurusp.png">
+            <img src="Carnotaurusfinal.png"  alt="carnotauro" id="carnotauroimg"></picture>
+        
         <h2 class="subt">DESCOBERTA</h2>
         <p>O único fóssil de carnotauro conhecido foi encontrado em 1984 na província de Chubut, na Argentina, em uma pesquisa liderada pelo arqueólogo José Bonaparte. O fóssil é de um dinossauro já adulto, e que foi consideravelmente deformado pelo processo de fossilização e por outros processos físicos como o <a href="intemperismo.html">intemperismo</a>. Em 1985, um ano depois de encontrado, foi divulgado de fato ao mundo aquele novo dinossauro. Hoje em dia o fóssil se encontra no Museu Argentino de Ciências Naturais. </p>
         <h2 class="subt">ETIMOLOGIA</h2>
