--- a/OTGW/index.html
+++ b/OTGW/index.html
@@ -86,12 +86,15 @@
                 <cite>I wish i had nine lives like that one.</cite> 
                 <p>A tradução é algo como "Eu queria ter nove vidas como aquele alí", se referindo aos gatos, que na cultura americana são ditos como tendo nove vidas (nove, não sete como no Brasil). Conclusão: senhorita Langtree gostaria de ter mais vidas, indicando que perdeu a sua, e isso abre a possibilidade até mesmo para imaginarmos que Jimmy Brown não a deixou, ela quem o deixou, quando morreu. O problema é que ela encontra seu amado e no final do último episódio vemos ambos reunidos aproveitando o espetáculo de um circo. Então tudo acabou bem? Não é o que acredito, mas falaremos mais disso adiante.</p>
             </p>
+        <div id="box-imgs">
+            <img src="imgs/ms-langtree-2.jpg" id="img3" alt="" class="img-flutuante">
+            <img src="imgs/JimmyBrown.webp" id="img4" alt="" class="img-flutuante">
+        </div>
+ 
         </section>
 
 
-        <img src="imgs/ms-langtree-2.jpg" id="img3" alt="" class="img-flutuante">
-        <img src="imgs/JimmyBrown.webp" id="img4" alt="" class="img-flutuante">
-        <a id="link-p2" href="pagina2.html">PARTE 2</a>
+              <a id="link-p2" href="pagina2.html">PARTE 2</a>
     </section>
     
     <!-- style="width: 300px; margin-left: 90px; margin-top: 20px;" -->
