--- a/OTGW/index.html
+++ b/OTGW/index.html
@@ -14,12 +14,12 @@
 
 
 </head>
-<body>
+<body id="important">
    <header>
     <span class="material-symbols-outlined">
         menu
         </span>
-        <img src="imgs/title-otgw.png" alt="">
+        <img src="imgs/title-otgw.png" alt="" onclick="window.location.reload()">
         <nav class="menu"><ul><li><a href="#b1">O Desconhecido</a></li><li><a href="#p2">Mortos?</a></li><li><a href="#b2">Purgatório</a></li><li><a href="#p3">Personagens</a></li></ul></nav>
    </header>
 <main>
@@ -33,7 +33,7 @@
        <p><a href="goals.html">Sobre</a></p>
     </section>
 
-    <section id="p1" class="section-back">
+    <section id="p1" class="section-back flex-section">
         
         <img src="imgs/blueBird3.png" alt="" id="beatrice">
         <section class="texto" id="texto1">
@@ -48,7 +48,7 @@
     </section>
 
 
-    <section id="b1" class="section-back">
+    <section id="b1" class="section-back flex-section">
         <section class="texto" id="texto2">
             <h2>O que é o Desconhecido?</h2>
             <p>A pergunta central de nossa jornada será essa. No livro "The Art of Over The Garden Wall" temos uma resposta: o Desconhecido é um lugar entre a vida e a morte, entre sonhos e realidade. Isso não sana nossas perguntas, mas dá um caminho para explorarmos. Estariam as personagens mortas ou seria apenas a imaginação delas em ação? Quem sabe uma ilusão? Descobriremos logo...
@@ -58,7 +58,7 @@
 
 
 
-    <section id="p2" class="section-back">
+    <section id="p2" class="section-back flex-section">
         <section class="texto" id="texto3">
             <h2>Greg e Wirt estariam mortos?</h2>
             <p> Para começar, vamos nos lembrar do nono episódio da série, quando descobrimos que tudo aconteceu durante o período que os irmãos estavam submersos dentro d'água, ao escapar do trem que passava além dos muros do cemitério. Todos os acontecimentos da série ocorreram em poucos minutos, e nenhum dos dois irmãos morreram. No último episódio, após ambos acordarem no hospital e Greg balançar o Sapo, sua barriga "acende", indicando que a sineta engolida pelo mesmo alguns episódios atrás ainda estava lá.</p>
@@ -67,7 +67,7 @@
         </section>
     </section>
 
-    <section id="b2" class="section-back">
+    <section id="b2" class="section-back flex-section">
         <section class="texto" id="texto4">
             <h2>Purgatório</h2>
             <p>O purgatório é um lugar onde, segundo a Igreja Católica, as pessoas se purificam, pois não estão preparadas para ir ao Céu da forma que morreram. Aqui ele é diferente. A insipiração pode ser esta, mas para este vão mortos e pessoas que passaram por experiências de quase morte. Os irmãos quase morreram e se nos lembrarmos bem, o dia dos acontecimentos era halloween. O halloween vem da festa pagã celta "Samhain", que segundo sua tradição é o dia em que o véu que separa o mundo dos vivos e dos mortos está mais fino, permitindo o contato com os mortos com maior facilidade.</p>
@@ -77,7 +77,7 @@
         </section>
     </section>
 
-    <section id="p3" class="section-back">
+    <section id="p3" class="section-back flex-section">
 
         <section class="texto" id="texto5">
             <h2>Senhorita Langtree</h2>
@@ -94,7 +94,7 @@
         </section>
 
 
-              <a id="link-p2" href="pagina2.html">PARTE 2</a>
+              <div class="div-link"><a id="link-p2" href="pagina2.html">PARTE 2</a></div>
     </section>
     
     <!-- style="width: 300px; margin-left: 90px; margin-top: 20px;" -->
