--- a/OTGW/index.html
+++ b/OTGW/index.html
@@ -16,12 +16,17 @@
 </head>
 <body id="important">
    <header>
-    <span class="material-symbols-outlined">
+    <span class="material-symbols-outlined span-hidden-menu">
         menu
         </span>
         <img src="imgs/title-otgw.png" alt="" onclick="window.location.reload()">
         <nav class="menu"><ul><li><a href="#b1">O Desconhecido</a></li><li><a href="#p2">Mortos?</a></li><li><a href="#b2">Purgatório</a></li><li><a href="#p3">Personagens</a></li></ul></nav>
    </header>
+   <section class="hidden-menu">
+    <a href="">Outros conteúdos</a>
+    <a href="">Fontes-imagens</a> 
+    <a href="">Sobre</a>
+   </section>
 <main>
 
     <section id="invisible">
