--- a/OTGW/index.html
+++ b/OTGW/index.html
@@ -22,10 +22,15 @@
         <img src="imgs/title-otgw.png" alt="" onclick="window.location.reload()">
         <nav class="menu"><ul><li><a href="#b1">O Desconhecido</a></li><li><a href="#p2">Mortos?</a></li><li><a href="#b2">Purgatório</a></li><li><a href="#p3">Personagens</a></li></ul></nav>
    </header>
+
    <section class="hidden-menu">
+    <span class="material-symbols-outlined fecha-menu close-hidden-menu" id="xis-2">
+        close
+        </span>
     <a href="">Outros conteúdos</a>
     <a href="">Fontes-imagens</a> 
     <a href="">Sobre</a>
+    <img src="imgs/pngegg.png" alt="">
    </section>
 <main>
 
