--- a/OTGW/index.html
+++ b/OTGW/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="I11LDViH_6_FTHFbviKKrmkAUizJtqf2o36iTYUbZN4" />
     <title>OTGW</title>
     <link rel="stylesheet" href="style.css" media="all">
     <link rel="stylesheet" href="style-screen.css" media="screen">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="imgs/favicons/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
 
 </head>
 <body id="important">
