--- a/jogo/jogo.html
+++ b/jogo/jogo.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <section class="orientation">
+        <h1>GIRE O APARELHO</h1>
+    </section>
     <section class="container">
         <img src="imgs/dlf.pt-mario-pixel-png-5075199.png" alt="" class="clouds">
         <img src="imgs/super-mario-brothers-g324c0cce1_640.png" alt="" class="tubo">
