--- a/jogo/menu.html
+++ b/jogo/menu.html
@@ -11,16 +11,17 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         img {
-            width: 80%;
+            width: 95%;
             max-width: 500px;
-            align-self: center;
-            margin-top: 50px;
+            /* margin-top: 50px; */
         }
         .container {
+            position: relative;
             display: flex;
             flex-direction: column;
             height: 100vh;
             height: calc(var(--vh, 1vh) * 93);
+            align-items: center;
         }
         @keyframes letras {
             0% {
@@ -36,7 +37,7 @@
         input.botao {
             width: 100px;
             align-self: center;
-            margin-top: 90px;
+            /* margin-top: 90px; */
             height: 39px;
             background: none;
             background-color: rgb(253, 23, 23);
@@ -56,13 +57,58 @@
             cursor: pointer;
             background-color: rgb(255, 14, 14);
         }
+        .mario-peace {
+            width: 100px;
+            margin-top: 15%;
+        }
+        .div-bottom {
+            margin-top: 5%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+        .div-top {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+        }
+        .contents {
+            margin: 0;
+            padding: 0;
+            position: absolute;
+            bottom: -5px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
-    <section class="container">
+    <!-- <section class="container">
     <img src="imgs/Mario_Series_Logo.svg.png" alt="">
     <input type="button" class="botao" value="COMEÇAR" onclick="passar()">
+    </section> -->
+
+    <section class="container">
+        <div class="contents">
+        
+        <div class="div-top">
+            <img src="imgs/Mario_Series_Logo.svg.png" alt="">
+        </div>
+
+        <div class="div-bottom">
+            <input type="button" class="botao" value="COMEÇAR" onclick="passar()">
+            <img src="imgs/pngegg.png" alt="" class="mario-peace">
+        </div>
+
+        </div>
     </section>
+
     <script>
         function passar() {
             window.location.href = 'jogo.html'
