--- a/OTGW/o-segredo-alem-do-jardim-teorias.html
+++ b/OTGW/o-segredo-alem-do-jardim-teorias.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="I11LDViH_6_FTHFbviKKrmkAUizJtqf2o36iTYUbZN4" />
-    <title>OTGW</title>
+    <title>O Segredo Além Do Jardim: teorias sobre a série</title>
     <link rel="stylesheet" href="style.css" media="all">
     <link rel="stylesheet" href="style-screen.css" media="screen">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -27,7 +27,7 @@
     <span class="material-symbols-outlined span-hidden-menu">
         menu
         </span>
-        <img src="imgs/title-otgw.png" alt="" onclick="window.location.reload()">
+        <img src="imgs/titulo-over-the-garden-wall.png" alt="logo com a escrita 'over the garden wall' na cor dourada" onclick="window.location.reload()">
         <nav class="menu"><ul><li><a href="#b1">O Desconhecido</a></li><li><a href="#p2">Mortos?</a></li><li><a href="#b2">Purgatório</a></li><li><a href="#p3">Personagens</a></li></ul></nav>
    </header>
 
@@ -56,8 +56,6 @@
         <img src="imgs/blueBird3.png" alt="" id="beatrice">
         <section class="texto" id="texto1">
             <h1>Uma Introdução às Teorias da Série</h1>
-            <!-- <p>Lorem ipsum, dolor sit  adipisci suscipit quod tempora ab sunt ut porro inventore laborum quasi. Praesentium corporis sunt quia eos minus illum debitis unde porro nostrum, explicabo at, minima consectetur iste quisquam laudantium eius accusantium, illo dicta dolor aspernatur mollitia. Aliquid est iste repudiandae, unde, enim iusto facere repellat impedit quidem illo consequatur neque odit doloremque explicabo vel officia totam. Laboriosam, aliquid impedit delectus accusantium vitae ea, vero odit nisi exercitationem consequuntur similique quibusdam! Ducimus nulla nobis voluptatum consequatur? Atque vel quis doloremque, ex tempora nostrum vero sit aperiam omnis voluptas cumque sapiente, corrupti id? Perferendis placeat magni, deserunt nisi laborum adipisci quaerat consequuntur architecto nulla. Ipsam enim ut molestias odio, aut quos praesentium nostrum sint aliquid exercitationem veniam accusantium harum nesciunt dignissimos nemo ullam rem itaque nulla earum repellat, ex labore ab corporis. Saepe porro laboriosam autem at fuga voluptatibus tempore expedita nam aperiam, laborum earum delectus quo dolorum necessitatibus labore voluptatem nostrum. Consequuntur labore temporibus sequi numquam iste tenetur at ex, tempore velit vitae, doloremque molestias voluptates, quasi molestiae omnis. Suscipit repudiandae architecto voluptatem dolorem eius labore, quasi recusandae aperiam at ea doloribus minus eaque voluptates. A hic laudantium ipsam, laborum ratione nam est id excepturi accusantium. Ab, expedita officiis! Quaerat, voluptate eos unde nobis placeat, accusantium at suscipit culpa nisi, laudantium illo. Perspiciatis, modi nemo nisi voluptatibus doloribus, atque impedit perferendis, laboriosam quas repellendus veritatis. Cumque porro hic maiores expedita, rem mollitia tempora quisquam reprehenderit doloremque sit. Modi.</p>
-        -->
             <p>Over the Garden Wall (o Segredo além do Jardim) é uma minissérie animada criada por Patrick McHale, e veio ao ar em 2014. Se tratam de 10 episódios de cerca de 10 minutos cada, onde dois irmãos (Wirt e Greg) se perdem em uma floresta chamada por seus esparsos e singulares habitantes de "O Desconhecido", e buscam seu caminho de volta para casa.</p>
             <p>A verdadeira questão, e motivo para mim estar escrevendo sobre a série é que tudo presente nela, sejam as personagens, as paisagens, as músicas, tudo tem uma aura misteriosa. Mistérios, indiretas, pistas que apontam para uma verdade incerta são lançadas constantemente sobre quem assiste. O desenho te prende com seu clima animado e descontraído, que contrasta com a sensação de suspense, mistério e talvez até terror.</p>
             <p>O que vamos abordar aqui são as perguntas que nos restam após assisti-lá por completo, e as teorias que podem explicar muitas delas. Recomendo que leia somente após ter assistido essa pequena obra de arte chamada "O Segredo Além do Jardim".</p>
@@ -114,9 +112,6 @@
 
               <div class="div-link"><a id="link-p2" href="pagina2.html">PARTE 2</a></div>
     </section>
-    
-    <!-- style="width: 300px; margin-left: 90px; margin-top: 20px;" -->
-    <!-- style="height: 187px; margin-top: 20px;" -->
 </main>
    <footer>
     <p>Site criado por <a href="https://github.com/guibaumer" target="blank">Guilherme</a>.</p>
