--- a/OTGW/o-segredo-alem-do-jardim-teorias.html
+++ b/OTGW/o-segredo-alem-do-jardim-teorias.html
@@ -35,9 +35,9 @@
     <span class="material-symbols-outlined fecha-menu close-hidden-menu" id="xis-2">
         close
         </span>
-    <a href="">Outros conteúdos</a>
-    <a href="">Fontes-imagens</a> 
-    <a href="">Sobre</a>
+    <a href="#">Outros conteúdos</a>
+    <a href="fontes.html">Fontes-imagens</a> 
+    <a href="#">Sobre</a>
     <img src="imgs/pngegg.png" alt="">
    </section>
 <main>
