--- a/OTGW/fontes.html
+++ b/OTGW/fontes.html
@@ -33,6 +33,6 @@
         </ol>
     </section>
 
-    <div><a href="index.html">VOLTAR</a></div>
+    <div><a href="o-segredo-alem-do-jardim-teorias.html">VOLTAR</a></div>
 </body>
 </html>
