--- a/OTGW/o-segredo-alem-do-jardim-teorias.html
+++ b/OTGW/o-segredo-alem-do-jardim-teorias.html
@@ -46,9 +46,11 @@
         <span class="material-symbols-outlined fecha-menu">
             close
             </span>
-       <p><a href="central.html">Outros conteúdos</a></p>
+       <p><a href="#">Outros conteúdos</a></p>
+       <!-- central.html -->
        <p><a href="fontes.html">Fontes-imagens</a></p>
-       <p><a href="goals.html">Sobre</a></p>
+       <p><a href="#">Sobre</a></p>
+       <!-- goals.html -->
     </section>
 
     <section id="p1" class="section-back flex-section">
