--- a/OTGW/o-segredo-alem-do-jardim-teorias.html
+++ b/OTGW/o-segredo-alem-do-jardim-teorias.html
@@ -37,7 +37,7 @@
         </span>
     <a href="#">Outros conteúdos</a>
     <a href="fontes.html">Fontes-imagens</a> 
-    <a href="#">Sobre</a>
+    <a href="goals.html">Sobre</a>
     <img src="imgs/pngegg.png" alt="">
    </section>
 <main>
