--- a/jogo/fase2.html
+++ b/jogo/fase2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogo</title>
+    <title>Fase 2</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="imgs/cogumelo-favicon.png" type="image/x-icon">
@@ -13,6 +13,7 @@
             display: none;
         }
         .clouds {
+            /* animation: none; */
             display: none;
         }
     </style>
@@ -24,13 +25,15 @@
     </section>
     <section class="container">
         <section class="iniciar">
+            <h1>FASE 2</h1>
             <output class="output">3</output>
         </section>
         <img src="imgs/turtle-mario-gaming.gif" alt="" class="turtle">
         <img src="imgs/dlf.pt-mario-pixel-png-5075199.png" alt="" class="clouds">
         <img src="imgs/super-mario-brothers-g324c0cce1_640.png" alt="" class="tubo">
         <img src="imgs/supermario_knocmls3.gif" alt="" class="mario" id="mario-id">
+        <img src="imgs/bullet-bill.png" alt="" class="bill-img">
     </section>
 </body>
-<script src="javascript/index.js"></script>
+<script src="javascript/faseDois.js"></script>
 </html>
