--- a/reiDoPorco/index.html
+++ b/reiDoPorco/index.html
@@ -50,7 +50,7 @@
         <h1>REI DO PORCO</h1>
             <p>Suínos e agropecuária de subsistência.</p>
     </section>
-    <section class="sec-head">
+    <section class="sec-head section">
         <div class="div-text-top section">
             <div>
                 <h2>Suinocultura</h2>
