--- a/reiDoPorco/index.html
+++ b/reiDoPorco/index.html
@@ -63,10 +63,10 @@
     </section>
     <main>
         <section class="main-bg section">
-            <section class="texto texto-solido">
+            <!-- <section class="texto texto-solido">
                 <h2>Lorem</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, obcaecati ullam. Itaque temporibus qui porro adipisci? Beatae dolor, libero, eum fuga sapiente modi similique provident quisquam hic doloremque corporis. Deleniti error obcaecati tempore quibusdam consequatur esse aliquam molestias eum nobis possimus quae dolorum, necessitatibus consectetur commodi tempora earum culpa soluta enim maiores dicta. Dolore accusantium dolor dolorum ex enim assumenda, aliquam architecto eos nobis iste doloribus numquam cupiditate incidunt atque tenetur veritatis asperiores? Facilis aliquam incidunt, sint non repudiandae mollitia possimus nisi totam laborum. Doloribus ab nihil dolor non consequuntur, quidem rem voluptatum alias fugit.</p>
-            </section>
+            </section> -->
         </section>
         <main class="main-white section white1">
             <section class="texto texto-completo">
@@ -84,7 +84,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, obcaecati ullam. Itaque temporibus qui porro adipisci? Beatae dolor, libero, eum fuga sapiente modi similique provident quisquam hic doloremque corporis. Deleniti error obcaecati tempore quibusdam consequatur esse aliquam molestias eum nobis possimus quae dolorum, necessitatibus consectetur commodi tempora earum culpa soluta enim maiores dicta. Dolore accusantium dolor dolorum ex enim assumenda, aliquam architecto eos nobis iste doloribus numquam cupiditate incidunt atque tenetur veritatis asperiores? Facilis aliquam incidunt, sint non repudiandae mollitia possimus nisi totam laborum. Doloribus ab nihil dolor non consequuntur, quidem rem voluptatum alias fugit. Adipisci alias eos pariatur at!</p>
             </section> -->
             <div class="contato">Se interessou pelos animais?</div>
-            <div class="contato">Entre em contato e siga nosso canal no YouTube!</div>
+            <div class="contato contato2">Entre em contato e siga nosso canal no YouTube!</div>
             <div class="contato">
                 <span class="entre-contato"><a href="contato.html">Entrar em contato</a></span>
                 <span class="yt"><a target="_blank" href="https://www.youtube.com/@ReidoPorco"><img src="imgs/icons8-youtube.svg" alt=""></a></span>
