--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,11 +17,16 @@
 </head>
 <body>
     <nav class="nav-menu">
-        <h1>H1</h1>
+        <div class="svg-icons">
+            <img src="imgs/svgs/github-142-svgrepo-com.svg" alt="">
+            <img src="imgs/svgs/linkedin-round-svgrepo-com.svg" alt="">
+        </div>
         <span class="material-symbols-outlined">menu</span>
     </nav>
     <main>
         <section class="section home-section">
+        
+
             <h1>Guilherme<br>Baumer</h1>
             <p class="line typing-animation">Estudante de desenvolvimento web.</p>
         </section>
