--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,16 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="nav-menu">
 
         <div class="svg-icons">
-            <img src="imgs/svgs/github-142-svgrepo-com.svg" alt="">
-            <img src="imgs/svgs/linkedin-round-svgrepo-com.svg" alt="">
+            <a href="https://github.com/guibaumer" target="_blank"><img src="imgs/svgs/github-142-svgrepo-com.svg" alt=""></a>
+            <a href="#" target="_blank"><img src="imgs/svgs/linkedin-round-svgrepo-com.svg" alt=""></a>
         </div>
 
         <ul>
@@ -36,7 +35,8 @@
 
     </nav>
     <main>
-        <section class="section home-section">
+
+        <section class="section home-section zoom-movimento">
             <div class="hidden">
                 <ul>
                     <span class="material-symbols-outlined material-symbols-outlined-close">
@@ -51,9 +51,29 @@
 
             <h1>Guilherme<br>Baumer</h1>
             <p class="line typing-animation">Estudante de desenvolvimento web.</p>
+
+                <div class="svg-div">
+                    <img class="svg" src="imgs/svgs/javascript-155-svgrepo-com.svg" alt="">
+                    <img class="svg"  src="imgs/svgs/html-124-svgrepo-com.svg" alt="">
+                    <img class="svg"  src="imgs/svgs/css3-02-svgrepo-com.svg" alt="">
+                    <img class="svg"  src="imgs/svgs/react-logo-programming-2-svgrepo-com.svg" alt="">
+                </div>     
+              </section>
+
+        <section class="section whoAmI">
+            <div class="foto">
+                    
+            </div>
+            <div class="dados">
+                <h2>Quem sou eu?</h2>
+                <p>Me chamo Guilherme, estudo programação a cerca de 1 ano e estou focado no <strong>desenvolvimento web</strong>. Tenho grande interesse por tecnologia,
+                    assim como por leitura, video-game e música. Comecei meus estudos com cursos gratuitos de <strong>Javascript</strong>, <strong>HTML</strong> e <strong>CSS</strong> e quando percebi que realmente gostei assunto, adquiri um curso da Udemy de desenvolvimento full-stack, que ainda
+                    estou finalizando.
+                </p>
+                <p>Só tive contato com uma linguagem de programação desde que iniciei: javascript, pois decidi focar em apenas uma linguagem neste início de carreira. Desenvolvo com <strong>React</strong> (não este site) e Node.js, tenho conhecimento básicos de back-end e SEO e muita vontade de aprender.</p>
+            </div>
         </section>
-        <section class="section"></section>
-        <section class="section"></section>
+        <section class="section skills"></section>
         <section class="section"></section>
     </main>
     <footer>
