--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -62,7 +62,7 @@
 
         <section class="section whoAmI">
             <div class="foto">
-                    
+                <img src="imgs/Vault Boy Screams _ Vault Boy.jpg" alt="" class="minha-foto">
             </div>
             <div class="dados">
                 <h2>Quem sou eu?</h2>
