--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -58,19 +58,21 @@
                     <img class="svg"  src="imgs/svgs/css3-02-svgrepo-com.svg" alt="">
                     <img class="svg"  src="imgs/svgs/react-logo-programming-2-svgrepo-com.svg" alt="">
                 </div>     
+
+                <a href="#who-am-i"><img src="imgs/svgs/angles-down-solid.svg" alt="" class="arrow-down"></a>
               </section>
 
-        <section class="section whoAmI">
+        <section class="section whoAmI" id="who-am-i">
             <div class="foto">
                 <img src="imgs/Vault Boy Screams _ Vault Boy.jpg" alt="" class="minha-foto">
             </div>
             <div class="dados">
                 <h2>Quem sou eu?</h2>
-                <p>Me chamo Guilherme, estudo programação a cerca de 1 ano e estou focado no <strong>desenvolvimento web</strong>. Tenho grande interesse por tecnologia,
-                    assim como por leitura, video-game e música. Comecei meus estudos com cursos gratuitos de <strong>Javascript</strong>, <strong>HTML</strong> e <strong>CSS</strong> e quando percebi que realmente gostei assunto, adquiri um curso da Udemy de desenvolvimento full-stack, que ainda
-                    estou finalizando.
-                </p>
-                <p>Só tive contato com uma linguagem de programação desde que iniciei: javascript, pois decidi focar em apenas uma linguagem neste início de carreira. Desenvolvo com <strong>React</strong> (não este site) e Node.js, tenho conhecimento básicos de back-end e SEO e muita vontade de aprender.</p>
+                <p>Me chamo Guilherme, estudo programação há cerca de 1 ano e estou focado no <strong>desenvolvimento web</strong>. Tenho grande interesse por tecnologia,
+                    assim como por leitura, video-game e música.</p>
+                <p>Comecei meus estudos com cursos gratuitos de <strong>Javascript</strong>, <strong>HTML</strong> e <strong>CSS</strong> e quando percebi que realmente gostei do assunto, adquiri um curso da Udemy de desenvolvimento full-stack, que ainda
+                    estou finalizando.</p>
+                <p>Quando falamos em linguagens de programação, desde que comecei meus estudos mantive o foco no Javascript, mas também estou estudando <strong>Typescript</strong>, um superset de Javascript. Desenvolvo com <strong>React</strong> e Node.js, tenho conhecimento básicos de back-end e SEO e muita vontade de aprender.</p>
             </div>
         </section>
         <section class="section skills"></section>
