--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,9 +23,9 @@
         </div>
 
         <ul>
-            <li><a href="#">Quem sou?</a></li>
-            <li><a href="#">Habilidades</a></li>
-            <li><a href="#">Projetos</a></li>
+            <li><a href="#who-am-i">Quem sou?</a></li>
+            <li><a href="#skills-id">Habilidades</a></li>
+            <li><a href="#projetos-id">Projetos</a></li>
             <li><a href="#">Contato</a></li>
         </ul>
 
@@ -36,14 +36,14 @@
     </nav>
     <main>
 
-        <section class="section home-section zoom-movimento">
+        <section class="section home-section zoom-movimento background-degrade">
             <div class="hidden">
                 <ul>
                     <span class="material-symbols-outlined material-symbols-outlined-close">
                         close
                         </span>
-                    <li><a href="#">Quem sou?</a></li>
-                    <li><a href="#">Habilidades</a></li>
+                    <li><a href="#who-am-i">Quem sou?</a></li>
+                    <li><a href="#skills-id">Habilidades</a></li>
                     <li><a href="#">Projetos</a></li>
                     <li><a href="#">Contato</a></li>
                 </ul>        
@@ -75,8 +75,85 @@
                 <p>Quando falamos em linguagens de programação, desde que comecei meus estudos mantive o foco no Javascript, mas também estou estudando <strong>Typescript</strong>, um superset de Javascript. Desenvolvo com <strong>React</strong> e Node.js, tenho conhecimento básicos de back-end e SEO e muita vontade de aprender.</p>
             </div>
         </section>
-        <section class="section skills"></section>
-        <section class="section"></section>
+
+        <section class="section skills background-degrade" id="skills-id">
+            <h2>Habilidades</h2>
+            <section class="grid">
+
+                <div class="curso">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/javascript/" target="_blank">Javascript (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-3-de-5-40-horas/" target="_blank">HTML e CSS - módulo 3 (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-html5-e-css3-modulo-4-de-5-40-horas/" target="_blank">HTML e CSS - módulo 4 (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.cursoemvideo.com/curso/curso-pratico-de-seo-modulo-01/" target="_blank">SEO - módulo 1 (40 horas)</a></h4>
+                    <p class="fornecedor">- Curso Em Vídeo</p>
+                    <p class="estado">Completo</p>
+                </div>
+                <div class="curso pt-0 incompleto">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.udemy.com/course/curso-de-javascript-moderno-do-basico-ao-avancado/" target="_blank">Javascript e Typescript (140 horas)</a></h4>
+                    <p class="fornecedor">- Udemy</p>
+                    <p class="estado cursando">Cursando (50%)</p>
+                </div>
+                <div class="curso pt-0">
+                    <p class="tipo">Curso</p>
+                    <h4 class="nome"><a href="https://www.udemy.com/course/html5-e-css3-tecnicas-avancadas-com-flexbox-e-3-projetos/" target="_blank">HTML e CSS avançados (10 horas)</a></h4>
+                    <p class="fornecedor">- Udemy</p>
+                    <p class="estado">Completo</p>
+                </div>
+            </section>
+
+        </section>
+
+        <section class="section projetos" id="projetos-id">
+            <h2>Projetos</h2>
+            <div class="container">
+                <div class="project">
+
+                </div>
+                <div class="project-data">
+                    <h4>Gerador de CPF</h4>
+                    <p>Projeto desenvolvido com Javascript, HTML e CSS. Gera um CPF válido novo a cada clique.</p>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="project">
+
+                </div>
+                <div class="project-data">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore ipsa, doloribus provident veritatis itaque at soluta molestiae non, dolore, officiis corporis vitae iste magnam mollitia est sequi hic laudantium ad.</p>
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="project">
+
+                </div>
+                <div class="project-data">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore ipsa, doloribus provident veritatis itaque at soluta molestiae non, dolore, officiis corporis vitae iste magnam mollitia est sequi hic laudantium ad.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="section contato">
+        </section>
+
     </main>
     <footer>
         <p>Site criado por <a href="#">Guilherme</a></p>
